2012-10-10 15:12  sanchouss_

	* include/log4cpp/RollingFileAppender.hh, src/RollingFileAppender.cpp: 
	[feature] number history files so that they can be lexicographically ordered by name properly.
	Width of file extension is made constant and depends on count of backup files (i.e., 
	for number of 15 backup files, extensions will be .01, .02, ..., .14, .15)

2007-09-03 12:25  waffel

	* configure.in: [feature] changed version to 1.0

2007-09-03 11:15  waffel

	* include/log4cpp/Makefile.am: [intern] added forgotten header
	  file. make distcheck should work now

2007-08-28 18:24  dark--angel

	* tests/testbench.cpp: Fix missed ENDLINE

2007-08-27 21:26  dark--angel

	* include/log4cpp/CategoryStream.hh, src/CategoryStream.cpp,
	  tests/testCategory.cpp, tests/testConfig.cpp, tests/testDLL.cpp,
	  tests/testFixedContextCategory.cpp, tests/testPropertyConfig.cpp,
	  tests/testmain.cpp: Removed CategoryStream end of line enum Fix
	  eol and left manipulators

2007-08-27 21:03  dark--angel

	* include/log4cpp/Category.hh: ownAppenders must be virtual

2007-08-27 20:28  dark--angel

	* tests/jamfile: Added missed test to bjam file

2007-08-27 20:27  dark--angel

	* src/PatternLayout.cpp: Fixed %m formater

2007-08-27 18:47  dark--angel

	* src/BufferingAppender.cpp: Fix for Solaris 10

2007-08-25 11:42  dark--angel

	* Makefile.am, log4cpp.spec.in, src/Makefile.am: Scott Cantor
	  Solaris 10 fixes

2007-08-24 07:51  dark--angel

	* m4/ACX_PTHREAD.m4: Fix thread tests for Solaris

2007-08-20 11:55  dark--angel

	* configure.in: Scott Cantor pointed out some inconsistenst between
	  his configure script and my previous changes. Fixed.

2007-08-19 12:58  dark--angel

	* m4/ACX_PTHREAD.m4, configure.in: [no log message]

2007-08-19 12:36  dark--angel

	* configure.in: Fixed pthread. See
	  https://mail.internet2.edu/wws/arc/shibboleth-users/2007-08/msg00077.html

2007-08-19 12:30  dark--angel

	* src/Makefile.am: Added localtime.cpp

2007-08-19 12:24  dark--angel
